<resources>
    <string name="app_name">Showdown</string>
    <string name="slot1">slot1</string>
    <string name="slot2">slot2</string>
    <string name="slot3">slot3</string>
    <string name="slot4">slot4</string>
    <string name="Gen1">Gen1</string>
    <string name="Gen2">Gen2</string>
    <string name="Gen3">Gen3</string>
    <string name="Gen4">Gen4</string>
    <string name="Gen5">Gen5</string>
    <string name="Gen6">Gen6</string>
    <string name="Gen7">Gen7</string>
    <string name="Gen8">Gen8</string>
    <string name="Gen9">Gen9</string>
    <string name="AllGens">All Generations</string>
    <string name="favoritePokemonAmount">%1$s Favorite Pokemon</string>
    <string name="retry">Try again</string>
    <string name="replay">Play again</string>
    <string name="rightAnswer">You got it!</string>
    <string name="wrongAnswer">Sorry, better luck next time.</string>
    <string name="wtp">Who\'s that poke\'mon?</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="difficultyUp">Increase Difficulty</string>
    <string name= "answerTitle">It\'s %1$s!</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="bulbapediaLink">"https://bulbapedia.bulbagarden.net/wiki/%1$s_(Pokémon)"</string>
</resources>