<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="favs"
        app:layout_constraintBottom_toTopOf="@id/allGens"
        app:layout_constraintEnd_toStartOf="@id/teamBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/teamBtn"
        android:text="teams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/allGens"
        app:layout_constraintStart_toEndOf="@id/favsBtn"
        app:layout_constraintEnd_toStartOf="@id/WTPBtn"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/WTPBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ID Game"
        app:layout_constraintBottom_toTopOf="@id/allGens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/teamBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/allGens"
            android:text="@string/AllGens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/teamBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/gen1"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gen1"
        android:text="@string/Gen1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/allGens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gen2"
        app:layout_constraintBottom_toTopOf="@id/gen5"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gen2"
        android:text="@string/Gen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/allGens"
        app:layout_constraintStart_toEndOf="@id/gen1"
        app:layout_constraintEnd_toStartOf="@id/gen3"
        app:layout_constraintBottom_toTopOf="@id/gen6"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gen3"
        android:text="@string/Gen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/allGens"
        app:layout_constraintStart_toEndOf="@id/gen2"
        app:layout_constraintEnd_toStartOf="@id/gen4"
        app:layout_constraintBottom_toTopOf="@id/gen7"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gen4"
        android:text="@string/Gen4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/allGens"
        app:layout_constraintStart_toEndOf="@id/gen3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gen8"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gen5"
        android:text="@string/Gen5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gen1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gen6"
        app:layout_constraintBottom_toTopOf="@id/gen9"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gen6"
        android:text="@string/Gen6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gen2"
        app:layout_constraintStart_toEndOf="@id/gen5"
        app:layout_constraintEnd_toStartOf="@id/gen7"
        app:layout_constraintBottom_toTopOf="@id/gen9"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gen7"
        android:text="@string/Gen7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gen3"
        app:layout_constraintStart_toEndOf="@id/gen6"
        app:layout_constraintEnd_toStartOf="@id/gen8"
        app:layout_constraintBottom_toTopOf="@id/gen9"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gen8"
        android:text="@string/Gen8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gen4"
        app:layout_constraintStart_toEndOf="@id/gen7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gen9"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gen9"
        android:text="@string/Gen9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gen5"
        app:layout_constraintStart_toEndOf="@id/gen6"
        app:layout_constraintEnd_toStartOf="@id/gen7"
        app:layout_constraintBottom_toTopOf="@id/pokeSv"/>
    <SearchView
        android:id="@+id/pokeSv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gen9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pokeRv"
        android:layout_margin="16dp"
        android:background="@drawable/custom_background"
        android:iconifiedByDefault="false"
        android:queryHint="search for pokemon"
        android:queryBackground="@android:color/transparent"
        app:actionViewClass="android.widget.SearchView"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pokeRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".55"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokeSv"
        tools:listitem="@layout/poke_item"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>