<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pokeInfoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/teamMemberIv"
        app:layout_constraintEnd_toStartOf="@id/slot1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="number name\n  type(s)"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pokeStatsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/slot1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="hp\n\n atk\n\n def\n\n sp atk\n\n sp def\n\n speed"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/teamMemberIv"
        android:layout_width="125dp"
        android:layout_height="125dp"
        app:layout_constraintTop_toBottomOf="@id/pokeInfoTv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/slot1"
        tools:src="@drawable/ic_launcher_foreground"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/slot1"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:hint="@string/slot1"
        app:layout_constraintBottom_toTopOf="@id/slot2"
        app:layout_constraintEnd_toStartOf="@id/pokeStatsTv"
        app:layout_constraintStart_toEndOf="@id/teamMemberIv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/move1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
             />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/slot2"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:hint="@string/slot2"
        app:layout_constraintTop_toBottomOf="@id/slot1"
        app:layout_constraintBottom_toTopOf="@id/slot3"
        app:layout_constraintEnd_toStartOf="@id/pokeStatsTv"
        app:layout_constraintStart_toEndOf="@id/teamMemberIv"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/move2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/slot3"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:hint="@string/slot3"
        app:layout_constraintTop_toBottomOf="@id/slot2"
        app:layout_constraintBottom_toTopOf="@id/slot4"
        app:layout_constraintEnd_toStartOf="@id/pokeStatsTv"
        app:layout_constraintStart_toEndOf="@id/teamMemberIv"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/move3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/slot4"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:hint="@string/slot4"
        app:layout_constraintTop_toBottomOf="@id/slot3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pokeStatsTv"
        app:layout_constraintStart_toEndOf="@id/teamMemberIv"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/move4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>